--- a/puptown/src/index.scss
+++ b/puptown/src/index.scss
@@ -8,9 +8,7 @@ $Red: #BF0426;
 $Light-red: #D9183B;
 $Dark-brown: #400D01;
 $Black: #000000;
-$White: #FFFFFF;
-
-
+$White:#FFFFFF;
 
 body {
   margin: 0;
@@ -21,4 +19,59 @@ body {
   box-sizing: border-box;
   max-width: 100vw;
   min-height: 100vh;
+}
+
+a{
+  text-decoration: none;
+  color: $Black;
+  cursor: pointer;
+}
+
+.signUp{
+  border: 1.5px solid $Maroon;
+  border-radius: 5px;
+  color: $Maroon;
+
+  :hover{
+    background-color: $Maroon;
+    color: $White;
+  }
+}
+
+input:focus{
+  outline: none;
+}
+
+hr{
+  position: relative;
+  ::after{
+    content: "or";
+  }
+}
+
+.google{
+  background-color: #007BFF;
+  border:none;
+  color: $White;
+  z-index: 0;
+  position: relative;
+  ::before{
+    content: url('./images/Google.svg');
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 40px;
+    height: 40px;
+    z-index: 2;
+  }
+}
+
+.apple{
+  color: #747474;
+  background-color: transparent;
+  border: 1px solid #747474;
+}
+
+.already-member{
+  text-align: center;
 }
